--- a/css/styles.css
+++ b/css/styles.css
@@ -541,6 +541,44 @@ button:focus {
     background-color:#2196F3;
 }
 
+/* ----------------------------backdrop-------------------------- */
+
+.backdrop {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modal {
+    width: 528px;
+    height: 581px;
+    background-color: var(--secondary-text-color);
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.modal-button {
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+}
+
+.modal-svg {
+    margin-top: 0px;
+    margin-right: 0px;
+}
+
 /* -------------------------------ФУТЕР--------------------------------- */
 
 .logo-footer {
