--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,14 @@ color: var(--primary-text-color);
     color:var(--primary-text-color);
 }
 
+.menu-link::after {
+    content: "";
+    width: 100%;
+    height: 4px;
+    background: #2196F3;
+    border-radius: 2px;
+}
+
 .header-links {
     display: flex;
     margin-left: 93px;
