--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,10 @@ color: var(--primary-text-color);
     position: relative;
 }
 
+.header-link:hover {
+    color: var(--secondary-background-color);
+}
+
 .menu-link::after {
     content: "";
     width: 100%;
@@ -164,6 +168,10 @@ color: var(--primary-text-color);
 
 .contacts {
     color: var(--accent-text-color);
+}
+
+.contacts:hover {
+    color: var(--secondary-background-color);
 }
 
 /* --------------------------ЗАГОЛОВОК И КНОПКА------------------------- */
