--- a/css/styles.css
+++ b/css/styles.css
@@ -513,6 +513,7 @@ li {
 .filter-button {
     min-width: 73px;
     height: 38px;
+    
     background: var(--primary-background-color);
     border-radius: 4px;
     border: none;
@@ -521,6 +522,10 @@ li {
     font-size: 16px;
     line-height: 1.62px;
     letter-spacing: 0.03em;
+
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-button-list {
