--- a/css/styles.css
+++ b/css/styles.css
@@ -569,6 +569,7 @@ button:hover {
 .overlay-link .card-set-overlay:hover,
 .overlay-link .card-set-overlay:focus {
     opacity: 1;
+    transform: translateY(-100%);
 }
 
 .card-set-overlay {
@@ -586,7 +587,9 @@ button:hover {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 73%;
+
+    transform: translateY(-100%);
 }
 
 .overlay-link {
