--- a/css/styles.css
+++ b/css/styles.css
@@ -566,6 +566,11 @@ button:hover {
     box-sizing: border-box;
 }
 
+.thumb-overlay {
+    position: relative;
+    overflow: hidden;
+}
+
 .overlay-link .card-set-overlay:hover,
 .overlay-link .card-set-overlay:focus {
     opacity: 1;
@@ -587,7 +592,7 @@ button:hover {
     top: 0;
     left: 0;
     width: 100%;
-    height: 73%;
+    height: 100%;
 
     transform: translateY(-100%);
 }
