--- a/css/styles.css
+++ b/css/styles.css
@@ -442,12 +442,12 @@ color: var(--primary-text-color);
     margin-bottom: 4px;
 }
 
-.container-set:hover,
+/* .container-set:hover,
 .container-set:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
     0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+} */
 
 .set-items {
     padding: 24px 24px 24px 24px;
@@ -495,10 +495,6 @@ address {
 a {
     color: var(--primary-text-color);
     text-decoration: none;
-}
-
-a:hover {
-    cursor:pointer;
 }
 
 li {
@@ -599,6 +595,13 @@ button:hover {
 
 .overlay-link {
     display: block;
+}
+
+.overlay-link:hover,
+.overlay-link:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+    0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 
