--- a/css/styles.css
+++ b/css/styles.css
@@ -420,39 +420,9 @@ color: var(--primary-text-color);
     background: var(--primary-background-color);
 }
 
-.filter-list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: -30px;
-    margin-top: -30px;
-}
-
-.filter-list > .container-set {
-    margin-left: 30px;
-    margin-top: 30px;
-    flex-basis: calc((100% - 30px * 3) / 3);
-}
-
 .our-team-list {
     display: flex;
     justify-content: center;
-}
-
-.title-filter {
-    margin-bottom: 4px;
-}
-
-/* .container-set:hover,
-.container-set:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-    0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-} */
-
-.set-items {
-    padding: 24px 24px 24px 24px;
-    border: 1px solid #EEEEEE;
-    border-top: 0px;
 }
 
 .name {
@@ -549,11 +519,27 @@ button:hover {
     border-radius: 4px;
 }
 
+/* ----------------------------CARDS-FILTER-------------------- */
+
 .title-filter { 
     font-size: 18px;
     line-height: 2.0;
     letter-spacing: 0.06em;
     color: var(--primary-text-color);
+    margin-bottom: 4px;
+}
+
+.filter-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+}
+
+.filter-list > .container-set {
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc((100% - 30px * 3) / 3);
 }
 
 .container-set {
@@ -565,6 +551,12 @@ button:hover {
 
 .thumb-overlay {
     position: relative;
+}
+
+.set-items {
+    padding: 24px 24px 24px 24px;
+    border: 1px solid #EEEEEE;
+    border-top: 0px;
 }
 
 .overlay-link .card-set-overlay:hover,
