--- a/css/styles.css
+++ b/css/styles.css
@@ -547,6 +547,7 @@ button:hover {
     width: 370px;
     background: #FFFFFF;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .thumb-overlay {
@@ -563,6 +564,7 @@ button:hover {
 .overlay-link .card-set-overlay:focus {
     opacity: 1;
     transform: translateY(0%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-set-overlay {
@@ -575,7 +577,7 @@ button:hover {
     line-height: 1.56;
     letter-spacing: 0.03em;
     text-align: center;
-    padding-top:63px ;
+    padding-top:63px;
     
     top: 0;
     left: 0;
