--- a/css/styles.css
+++ b/css/styles.css
@@ -424,7 +424,7 @@ color: var(--primary-text-color);
     align-items: center;
     justify-content: center;
 
-    transition-property: background-color;
+    transition-property: background-color, fill;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -510,7 +510,7 @@ li {
     line-height: 1.62px;
     letter-spacing: 0.03em;
 
-    transition-property: background-color;
+    transition-property: background-color, color, box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -603,7 +603,8 @@ button:hover {
     height: 100%;
 
     transform: translateY(100%);
-    transition: transform opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay-link {
@@ -662,27 +663,24 @@ button:focus {
 }
 
 .modal-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     position: absolute;
+    background-color: var(--secondary-text-color);
+
     width: 30px;
     height: 30px;
-    top: 0;
-    right: 0;
-    margin-right: 8px;
-    margin-top: 8px;
+    top: 8px;
+    right: 8px;
 }
 
 .modal-button:hover {
     background-color: var(--secondary-text-color);
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
-}
-
-.modal-svg {
-    margin-top: 7px;
-    margin-left: 2px;
 }
 
 /* -------------------------------ФУТЕР--------------------------------- */
